# vamp_wavediff

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
examples/: README.md  generate_example.py  generate_multichannel_example.py
plugin/: CMakeLists.txt
plugin/plugins/: WaveDiffPlugin.cpp  WaveDiffPlugin.h  plugins.cpp
plugins/: FixedTempoEstimator.cpp  PowerSpectrum.cpp  WaveDiff.cpp  WaveDiff.h  XCorrelation.cpp  XCorrelation.h  ZeroCrossing.cpp  plugins.cpp
scripts/: merger.sh
tests/: CMakeLists.txt  test_wavediff.cpp
ui/: Backend.cpp  Backend.h  CMakeLists.txt  Main.qml  main.cpp  main.qml  qml.qrc
